k8s/andrew-mqtt-broker.deployment.yaml
# andrew-mqtt-broker DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: andrew-mqtt-broker-deployment
  labels:
    tier: andrew-mqtt-broker
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 3
  selector:
    matchLabels:
      tier: andrew-mqtt-broker
  template:
    metadata:
      labels:
        tier: andrew-mqtt-broker
    spec:
      containers:
        - name: andrew-mqtt-broker
          image: antoineleguillou/andrew-mqtt-broker:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 350m
              memory: 450Mi
            requests:
              cpu: 250m
              memory: 250Mi
          ports:
            - containerPort: 8888
              name: ws

      restartPolicy: Always
---
# andrew-mqtt-broker SERVICES
apiVersion: v1
kind: Service
metadata:
  name: andrew-mqtt-broker-service
spec:
  selector:
    tier: andrew-mqtt-broker
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: ws
