k8s/andrew-mqtt-broker.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: andrew-mqtt-oauth-broker-ingress
  annotations:
    cert-manager.io/issuer: cert-manager-mqtt-broker-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "512k"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "7200"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "7200"
spec:
  tls:
    - hosts:
        - andrew-mqtt-oauth-broker.students-epitech.ovh
      secretName: tls-andrew-mqtt-oauth-broker
  rules:
    - host: andrew-mqtt-oauth-broker.students-epitech.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: andrew-mqtt-oauth-broker-service
                port:
                  number: 8888
